--- a/vtools/WinLab/Makefile.files
+++ b/vtools/WinLab/Makefile.files
@@ -2,6 +2,7 @@ OBJ_LIST = \
 .obj/App.o \
 .obj/Application.o \
 .obj/Client.o \
+.obj/ColorListWindow.o \
 .obj/LabWindow.o \
 .obj/main.o \
 
@@ -10,6 +11,7 @@ ASM_LIST = \
 .obj/App.s \
 .obj/Application.s \
 .obj/Client.s \
+.obj/ColorListWindow.s \
 .obj/LabWindow.s \
 .obj/main.s \
 
@@ -18,6 +20,7 @@ DEP_LIST = \
 .obj/App.dep \
 .obj/Application.dep \
 .obj/Client.dep \
+.obj/ColorListWindow.dep \
 .obj/LabWindow.dep \
 .obj/main.dep \
 
@@ -37,6 +40,9 @@ include $(RULES_FILE)
 .obj/Client.o : src/./Client.cpp
 	$(CC) $(CCOPT) $< -o $@
 
+.obj/ColorListWindow.o : src/./ColorListWindow.cpp
+	$(CC) $(CCOPT) $< -o $@
+
 .obj/LabWindow.o : src/./LabWindow.cpp
 	$(CC) $(CCOPT) $< -o $@
 
@@ -52,6 +58,9 @@ include $(RULES_FILE)
 	$(CC) -S $(CCOPT) $< -o $@
 
 .obj/Client.s : src/./Client.cpp
+	$(CC) -S $(CCOPT) $< -o $@
+
+.obj/ColorListWindow.s : src/./ColorListWindow.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
 .obj/LabWindow.s : src/./LabWindow.cpp
@@ -70,6 +79,9 @@ include $(RULES_FILE)
 
 .obj/Client.dep : src/./Client.cpp
 	$(CC) $(CCOPT) -MM -MT .obj/Client.o $< -MF $@
+
+.obj/ColorListWindow.dep : src/./ColorListWindow.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/ColorListWindow.o $< -MF $@
 
 .obj/LabWindow.dep : src/./LabWindow.cpp
 	$(CC) $(CCOPT) -MM -MT .obj/LabWindow.o $< -MF $@
