--- a/vtools/BookLab/Convertor/Makefile
+++ b/vtools/BookLab/Convertor/Makefile
@@ -26,6 +26,7 @@ include $(CCORE_ROOT)/Target/Makefile.app
 .PHONY : run
 
 run: $(TARGET) 
+	$(TARGET) page_Arrays.html page_Arrays.bookinc.ddl
 
 
 
