--- a/vtools/BookLab/Convertor/Makefile.files
+++ b/vtools/BookLab/Convertor/Makefile.files
@@ -1,5 +1,6 @@
 OBJ_LIST = \
 .obj/Convert.o \
+.obj/CppText.o \
 .obj/DomConvert.o \
 .obj/ErrorId.o \
 .obj/PrintPage.o \
@@ -10,6 +11,7 @@ OBJ_LIST = \
 
 ASM_LIST = \
 .obj/Convert.s \
+.obj/CppText.s \
 .obj/DomConvert.s \
 .obj/ErrorId.s \
 .obj/PrintPage.s \
@@ -20,6 +22,7 @@ ASM_LIST = \
 
 DEP_LIST = \
 .obj/Convert.dep \
+.obj/CppText.dep \
 .obj/DomConvert.dep \
 .obj/ErrorId.dep \
 .obj/PrintPage.dep \
@@ -35,6 +38,9 @@ include $(RULES_FILE)
 
 
 .obj/Convert.o : src/./Convert.cpp
+	$(CC) $(CCOPT) $< -o $@
+
+.obj/CppText.o : src/./CppText.cpp
 	$(CC) $(CCOPT) $< -o $@
 
 .obj/DomConvert.o : src/./DomConvert.cpp
@@ -60,6 +66,9 @@ include $(RULES_FILE)
 .obj/Convert.s : src/./Convert.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
+.obj/CppText.s : src/./CppText.cpp
+	$(CC) -S $(CCOPT) $< -o $@
+
 .obj/DomConvert.s : src/./DomConvert.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
@@ -82,6 +91,9 @@ include $(RULES_FILE)
 
 .obj/Convert.dep : src/./Convert.cpp
 	$(CC) $(CCOPT) -MM -MT .obj/Convert.o $< -MF $@
+
+.obj/CppText.dep : src/./CppText.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/CppText.o $< -MF $@
 
 .obj/DomConvert.dep : src/./DomConvert.cpp
 	$(CC) $(CCOPT) -MM -MT .obj/DomConvert.o $< -MF $@
