--- a/vtools/TruePrime/Makefile.files
+++ b/vtools/TruePrime/Makefile.files
@@ -2,6 +2,7 @@ OBJ_LIST = \
 .obj/App.o \
 .obj/Application.o \
 .obj/Client.o \
+.obj/PrimeBuilder.o \
 .obj/TruePrime.o \
 .obj/main.o \
 
@@ -10,6 +11,7 @@ ASM_LIST = \
 .obj/App.s \
 .obj/Application.s \
 .obj/Client.s \
+.obj/PrimeBuilder.s \
 .obj/TruePrime.s \
 .obj/main.s \
 
@@ -18,6 +20,7 @@ DEP_LIST = \
 .obj/App.dep \
 .obj/Application.dep \
 .obj/Client.dep \
+.obj/PrimeBuilder.dep \
 .obj/TruePrime.dep \
 .obj/main.dep \
 
@@ -37,6 +40,9 @@ include $(RULES_FILE)
 .obj/Client.o : src/./Client.cpp
 	$(CC) $(CCOPT) $< -o $@
 
+.obj/PrimeBuilder.o : src/./PrimeBuilder.cpp
+	$(CC) $(CCOPT) $< -o $@
+
 .obj/TruePrime.o : src/./TruePrime.cpp
 	$(CC) $(CCOPT) $< -o $@
 
@@ -52,6 +58,9 @@ include $(RULES_FILE)
 	$(CC) -S $(CCOPT) $< -o $@
 
 .obj/Client.s : src/./Client.cpp
+	$(CC) -S $(CCOPT) $< -o $@
+
+.obj/PrimeBuilder.s : src/./PrimeBuilder.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
 .obj/TruePrime.s : src/./TruePrime.cpp
@@ -70,6 +79,9 @@ include $(RULES_FILE)
 
 .obj/Client.dep : src/./Client.cpp
 	$(CC) $(CCOPT) -MM -MT .obj/Client.o $< -MF $@
+
+.obj/PrimeBuilder.dep : src/./PrimeBuilder.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/PrimeBuilder.o $< -MF $@
 
 .obj/TruePrime.dep : src/./TruePrime.cpp
 	$(CC) $(CCOPT) -MM -MT .obj/TruePrime.o $< -MF $@
