--- a/tools/vmake/Makefile.files
+++ b/tools/vmake/Makefile.files
@@ -1,19 +1,28 @@
 OBJ_LIST = \
+.obj/SpawnProcess.o \
+.obj/VMakeCommand.o \
 .obj/VMakeData.o \
+.obj/VMakeExecute.o \
 .obj/VMakeFileProc.o \
 .obj/VMakeProc.o \
 .obj/main.o \
 
 
 ASM_LIST = \
+.obj/SpawnProcess.s \
+.obj/VMakeCommand.s \
 .obj/VMakeData.s \
+.obj/VMakeExecute.s \
 .obj/VMakeFileProc.s \
 .obj/VMakeProc.s \
 .obj/main.s \
 
 
 DEP_LIST = \
+.obj/SpawnProcess.dep \
+.obj/VMakeCommand.dep \
 .obj/VMakeData.dep \
+.obj/VMakeExecute.dep \
 .obj/VMakeFileProc.dep \
 .obj/VMakeProc.dep \
 .obj/main.dep \
@@ -25,7 +34,16 @@ ASM_OBJ_LIST = \
 include $(RULES_FILE)
 
 
+.obj/SpawnProcess.o : src/./SpawnProcess.cpp
+	$(CC) $(CCOPT) $< -o $@
+
+.obj/VMakeCommand.o : src/./VMakeCommand.cpp
+	$(CC) $(CCOPT) $< -o $@
+
 .obj/VMakeData.o : src/./VMakeData.cpp
+	$(CC) $(CCOPT) $< -o $@
+
+.obj/VMakeExecute.o : src/./VMakeExecute.cpp
 	$(CC) $(CCOPT) $< -o $@
 
 .obj/VMakeFileProc.o : src/./VMakeFileProc.cpp
@@ -39,7 +57,16 @@ include $(RULES_FILE)
 
 
 
+.obj/SpawnProcess.s : src/./SpawnProcess.cpp
+	$(CC) -S $(CCOPT) $< -o $@
+
+.obj/VMakeCommand.s : src/./VMakeCommand.cpp
+	$(CC) -S $(CCOPT) $< -o $@
+
 .obj/VMakeData.s : src/./VMakeData.cpp
+	$(CC) -S $(CCOPT) $< -o $@
+
+.obj/VMakeExecute.s : src/./VMakeExecute.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
 .obj/VMakeFileProc.s : src/./VMakeFileProc.cpp
@@ -53,8 +80,17 @@ include $(RULES_FILE)
 
 
 
+.obj/SpawnProcess.dep : src/./SpawnProcess.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/SpawnProcess.o $< -MF $@
+
+.obj/VMakeCommand.dep : src/./VMakeCommand.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/VMakeCommand.o $< -MF $@
+
 .obj/VMakeData.dep : src/./VMakeData.cpp
 	$(CC) $(CCOPT) -MM -MT .obj/VMakeData.o $< -MF $@
+
+.obj/VMakeExecute.dep : src/./VMakeExecute.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/VMakeExecute.o $< -MF $@
 
 .obj/VMakeFileProc.dep : src/./VMakeFileProc.cpp
 	$(CC) $(CCOPT) -MM -MT .obj/VMakeFileProc.o $< -MF $@
