--- a/tools/Makefile
+++ b/tools/Makefile
@@ -17,7 +17,7 @@ LIST = exectest Keywords MakeList MakeString Regen Volume EllipticPi \
        EchoServer PSecEchoServer PTPEchoServer PTPServerProc PTPServer PTPSecureServerProc PTPSecureServer PTPSecureClient \
        DDLShow DDLTypeSet \
        CondLangLR1/Main CondLangLR1/Gen \
-       vmake
+       vmake VMakeDep
 
 include ../Target/Makefile.list
 
