next version start

--- a/book/Convertor/Makefile
+++ b/book/Convertor/Makefile
@@ -11,7 +11,7 @@
 #
 #----------------------------------------------------------------------------------------
 
-CCORE_ROOT = ../../..
+CCORE_ROOT = ../..
 
 include $(CCORE_ROOT)/Makefile.host
 
